<resources>
    <string name="app_name">NASA-Rover-Vehicles</string>
    <string name="curiosity_tab">Curiosity</string>
    <string name="opportunity_tab">Opportunity</string>
    <string name="spirit_tab">Spirit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="curiosity_view_holder">Curiosity View Holder</string>
    <string name="vehicle_name">Vehicle: %s</string>
    <string name="photo_date">Photo Date: %s</string>
    <string name="camera_type">Camera: %s</string>
    <string name="vehicle_status">Status: %s</string>
    <string name="launch_date">Launch Date: %s</string>
    <string name="landing_date">Landing Date: %s</string>
    <string name="photo_info_content">Photo Info</string>

    <string-array name="tabNames">
        <item>Curiosity</item>
        <item>Opportunity</item>
        <item>Spirit</item>
    </string-array>

    <string name="FHAZ">FHAZ</string>
    <string name="RHAZ">RHAZ</string>
    <string name="MAST">MAST</string>
    <string name="CHEMCAM">CHEMCAM</string>
    <string name="MAHLI">MAHLI</string>
    <string name="MARDI">MARDI</string>
    <string name="NAVCAM">NAVCAM</string>
    <string name="PANCAM">PANCAM</string>
    <string name="MINITES">MINITES</string>

    <string-array name="curiosityFilterOptions">
        <item>FHAZ</item>
        <item>RHAZ</item>
        <item>MAST</item>
        <item>CHEMCAM</item>
        <item>MAHLI</item>
        <item>MARDI</item>
        <item>NAVCAM</item>
    </string-array>

    <string-array name="opportunityFilterOptions">
        <item>FHAZ</item>
        <item>RHAZ</item>
        <item>NAVCAM</item>
        <item>PANCAM</item>
        <item>MINITES</item>
    </string-array>

    <string-array name="spiritFilterOptions">
        <item>FHAZ</item>
        <item>RHAZ</item>
        <item>NAVCAM</item>
        <item>PANCAM</item>
        <item>MINITES</item>
    </string-array>


</resources>