<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SpiritPhotosFragment">
    <Button
        android:id="@+id/fhaz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FHAZ"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rhaz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RHAZ"
        android:layout_marginLeft="5dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/fhaz"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/minites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MINITES"
        android:layout_marginLeft="5dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/rhaz"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/chemcam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CHEMCAM"
        android:layout_marginLeft="5dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/minites"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/navcam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/NAVCAM"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rhaz" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/curiosity_view_holder" />


</androidx.constraintlayout.widget.ConstraintLayout>